# advent_of_code_2021

./: CMakeLists.txt
src/: FileHandler.cpp  FileHandler.hpp  SlidingTotalWindow.cpp  SlidingTotalWindow.h  aoc1.cpp  aoc2.cpp  aoc3.cpp
src/aoc10/: aoc10_input.h  aoc10_tiny_test.h  aoc10test.h  main.cpp
